--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,36 +3,34 @@
   "titleOnbroadingPage_2": "Take Advantage\n Of The Offer Shopping",
   "titleOnbroadingPage_3": "All Type Of\n Within Your Reach",
   "descOnbroadingPage":"Publish up your selfies to make yourself more beautiful with this app",
-  "textWelcome": "Welcome",
-  "textLoginNote": "Please login or sing up to continue our app",
   "textSingUp": "Sing Up",
   "textLogin": "Login",
-  "textCreateAccount": "Create an new account",
-  "textProxy": "By create an account you have to agree with our them & condication",
-  "textSuccessFully": "Successfully",
-  "textSuccessFullyDesc": "You have successfully registered in our app and start working in it",
+  "textWelcome": "Welcome",
+  "textLoginNote": "Please login or sing up to continue our app",
+  "textEmail": "Email",
+  "textPassword": "Password",
+  "textEmailLable": "Your email",
+  "textPasswordLable": "Your password",
+  "textOr": "or",
   "textLoginWithGoogle": "Login with Google",
   "textLoginWithFacebook": "Login with Facebook",
   "textLoginWithApple": "Login with Apple",
-  "textInvalid": "Account or password is incorrect",
-  "textStartShopping": "Start Shopping",
-  "textHintEmailLable": "Your email",
-  "textEmailLable": "Email",
-  "textPasswordLable": "Password",
-  "textHintPasswordLable": "Your password",
-  "textValidateEmptyString": "Please enter this field",
-  "textErrorPasswordLable": "Password inValidate",
-  "textErrorEmailLable": "Email inValidate",
-  "textErrorConfirmPasswordLable": "Confirm Password inValidate",
-  "textErrorNotEqualConfirmPasswordLable": "Confirm Password not equal password",
-  "textErrorNameLable": "Name must least 4 characters",
-  "textNameLabel": "Name",
-  "textHintNameLabel": "Your name",
+  "textCreateAccount": "Create an new account",
+  "textName": "Name",
+  "textNameLable": "Your name",
   "textConfirmPassword": "Confirm password",
-  "textHintConfirmPassword": "Your confirm password",
-  "textMinAgo": "min ago",
-  "textHourAgo": "hour ago",
-  "textDayAgo": "day ago",
+  "textConfirmPasswordLable": "Your confirm password",
+  "textProxy": "By create an account you have to agree with our them & condication",
+  "textSuccessFully": "Successfully",
+  "textSuccessFullyDesc": "You have successfully registered in our app and start working in it",
+  "textStartShopping": "Start Shopping",
+  "textInvalidAccount": "Account or password is incorrect",
+  "textValidateEmptyString": "Please enter this field",
+  "textErrorPassword": "Password must least 4 characters",
+  "textErrorEmail": "Email inValidate",
+  "textErrorConfirmPassword": "Confirm Password must least 4 characters",
+  "textErrorNotEqualConfirmPassword": "Confirm Password not equal password",
+  "textErrorName": "Name must least 4 characters",
   "textHome": "Home",
   "textCart": "Cart",
   "textNotify": "Notify",
@@ -47,13 +45,29 @@
   "textDescription": "Description",
   "textTotalPrice": "Total Price",
   "textAddToCart": "Add To Cart",
+  "textSuccess": "Success",
+  "textOkay": "Okay",
   "textMyCart": "My Cart",
   "textTotal": "Total",
   "textItem": "item",
   "textCheckoutCart": "Process To Checkout",
-  "textCartEmpty": "Your Cart is empty! Please Add To Cart"
-
-
-
-
+  "textCartEmpty": "Your Cart is empty! Please Add To Cart",
+  "textCheckoutCartSuccess": "You checkout success",
+  "textDescNotify": "You have successfully installed your order",
+  "textChangeLanguage": "Change Language",
+  "textSave": "Save",
+  "textMinAgo": "min ago",
+  "textHourAgo": "hour ago",
+  "textDayAgo": "day ago",
+  "textAge": "Age",
+  "textLanguage": "Language",
+  "textNotification": "Notification",
+  "textDarkMood": "Dark Mood",
+  "textOn": "on",
+  "textHelpCenter": "Help Center",
+  "textLogOut": "Log Out",
+  "textUploadImage": "Upload Image",
+  "textSetting": "Setting",
+  "textSearchPage": "Search",
+  "textSearchProduct": "Search Product"
 }
