--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -3,53 +3,72 @@
   "titleOnbroadingPage_2": "Tận dụng lợi thế\n Trong số ưu đãi mua sắm",
   "titleOnbroadingPage_3": "Tất cả các loại\n Trong tầm tay của bạn",
   "descOnbroadingPage":"Đăng ảnh selfie của bạn để khiến mình đẹp hơn với ứng dụng này",
-  "textWelcome": "Welcome",
-  "textLoginNote": "Vui lòng đăng nhập hoặc hát lên để tiếp tục ứng dụng của chúng tôi",
-  "textSingUp": "Đăng kí",
-  "textLogin": "Đăng nhập",
+  "textSingUp": "Đăng Ký",
+  "textLogin": "Đăng Nhập",
+  "textWelcome": "Chào mừng",
+  "textLoginNote": "Vui lòng đăng nhập hoặc đăng ký để tiếp tục ứng dụng của chúng tôi",
+  "textEmail": "Email",
+  "textPassword": "Mật Khẩu",
+  "textEmailLable": "Email của bạn",
+  "textPasswordLable": "Mật khẩu của bạn",
+  "textOr": "hoặc",
+  "textLoginWithGoogle": "Đăng Nhập Bằng Google",
+  "textLoginWithFacebook": "Đăng Nhập Bằng Facebook",
+  "textLoginWithApple": "Đăng Nhập Bằng Apple",
   "textCreateAccount": "Tạo tài khoản mới",
-  "textProxy": "Bằng cách tạo một tài khoản, bạn phải đồng ý với chúng và điều kiện của chúng tôi",
-  "textSuccessFully": "Thành công",
-  "textSuccessFullyDesc": "Bạn đã đăng ký thành công trong ứng dụng của chúng tôi và bắt đầu làm việc trong đó",
-  "textLoginWithGoogle": "Đăng nhập bằng Google",
-  "textLoginWithFacebook": "Đăng nhập bằng Facebook",
-  "textLoginWithApple": "Đăng nhập bằng Apple",
-  "textInvalid": "Tài khoản hoặc mật khẩu không đúng",
-  "textStartShopping": "Bắt đầu mua sắm",
-  "textHintEmailLable": "Email của bạn",
-  "textEmailLable": "Email",
-  "textPasswordLable": "Mật khẩu",
-  "textHintPasswordLable": "Mật khẩu của bạn",
+  "textName": "Tên",
+  "textNameLable": "Tên của bạn",
+  "textConfirmPassword": "Xác Nhận Mật Khẩu",
+  "textConfirmPasswordLable": "Xác nhận mật khẩu của bạn",
+  "textProxy": "Bằng cách tạo tài khoản, bạn đã đồng ý với điều khoản và điều kiện của chúng tôi",
+  "textSuccessFully": "Thành Công",
+  "textSuccessFullyDesc": "Bạn đã đăng ký thành công trong ứng dụng của chúng tôi và có thể bắt đầu sử dụng nó",
+  "textStartShopping": "Bắt đầu Mua Sắm",
+  "textInvalidAccount": "Tài khoản hoặc mật khẩu không đúng",
   "textValidateEmptyString": "Vui lòng nhập trường này",
-  "textErrorPasswordLable": "Mật khẩu không được xác thực",
-  "textErrorEmailLable": "Email không đúng định dạng",
-  "textErrorConfirmPasswordLable": "Xác nhận Mật khẩu không được xác thực",
-  "textErrorNotEqualConfirmPasswordLable": "Xác nhận mật khẩu không bằng mật khẩu",
-  "textErrorNameLable": "Tên phải ít nhất 4 ký tự",
-  "textNameLabel": "Tên",
-  "textHintNameLabel": "Tên của bạn",
-  "textConfirmPassword": "Xác nhận mật khẩu",
-  "textHintConfirmPassword": "Xác nhận mật khẩu của bạn",
+  "textErrorPassword": "Mật khẩu phải chứa ít nhất 4 ký tự",
+  "textErrorEmail": "Email không hợp lệ",
+  "textErrorConfirmPassword": "Mật khẩu xác nhận phải chứa ít nhất 4 ký tự",
+  "textErrorNotEqualConfirmPassword": "Mật khẩu xác nhận không trùng khớp với mật khẩu",
+  "textErrorName": "Tên phải chứa ít nhất 4 ký tự",
+  "textHome": "Trang Chủ",
+  "textCart": "Giỏ Hàng",
+  "textNotify": "Thông Báo",
+  "textProfile": "Hồ Sơ",
+  "textSearch": "Tìm Kiếm Danh Mục",
+  "textProduct": "sản phẩm",
+  "textAddToCartSuccess": "Bạn đã đặt hàng thành công",
+  "textAddToCartFail": "Đơn hàng của bạn đã thất bại",
+  "textReview": "Đánh Giá",
+  "textCouterInStock": "Còn hàng trong kho",
+  "textSize": "Kích Cỡ",
+  "textDescription": "Mô Tả",
+  "textTotalPrice": "Tổng Giá",
+  "textAddToCart": "Thêm Vào Giỏ Hàng",
+  "textSuccess": "Thành Công",
+  "textOkay": "Được",
+  "textMyCart": "Giỏ Hàng Của Tôi",
+  "textTotal": "Tổng Cộng",
+  "textItem": "sản phẩm",
+  "textCheckoutCart": "Tiến Hành Thanh Toán",
+  "textCartEmpty": "Giỏ hàng của bạn đang trống! Vui lòng thêm sản phẩm vào giỏ hàng",
+  "textCheckoutCartSuccess": "Bạn đã thanh toán thành công",
+  "textDescNotify": "Bạn đã đặt hàng thành công đơn hàng",
+  "textChangeLanguage": "Thay Đổi Ngôn Ngữ",
+  "textSave": "Lưu",
   "textMinAgo": "phút trước",
   "textHourAgo": "giờ trước",
   "textDayAgo": "ngày trước",
-  "textHome": "Trang chủ",
-  "textCart": "Giỏ hàng",
-  "textNotify": "Thông báo",
-  "textProfile": "Cá nhân",
-  "textSearch": "Tìm kiếm danh mục",
-  "textProduct": "sản phẩm",
-  "textAddToCartSuccess": "Bạn đã đặt hàng thành công",
-  "textAddToCartFail": "Bạn đã đặt hàng thất bại",
-  "textReview": "Đánh giá",
-  "textCouterInStock": "Khả thi trong giỏ hàng",
-  "textSize": "Kích cỡ",
-  "textDescription": "Mô tả",
-  "textTotalPrice": "Tổng tiền",
-  "textAddToCart": "Thêm vào giỏ hàng",
-  "textMyCart": "Giỏ hàng của tôi",
-  "textTotal": "Tổng",
-  "textItem": "sản phẩm",
-  "textCheckoutCart": "Quá trình thanh toán",
-  "textCartEmpty": "giỏ hàng của bạn đang trống vui lòng thêm giỏ hàng"
+  "textAge": "Tuổi",
+  "textLanguage": "Ngôn Ngữ",
+  "textNotification": "Thông Báo",
+  "textDarkMood": "Chế Độ ",
+  "textOn": "bật",
+  "textHelpCenter": "Trung Tâm Trợ Giúp",
+  "textLogOut": "Đăng Xuất",
+  "textUploadImage": "Tải Hình Lên",
+  "textSetting": "Cài Đặt",
+  "textSearchPage": "Tìm kiếm",
+  "textSearchProduct": "Tìm kiếm sản phẩm"
+
 }
